--- a/s1.html
+++ b/s1.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>This is a text</h1>
-    <button id="myButton">Hide Text</button>
-    <button id="myButton1">Show Text</button>
+    <button id="nak">Hide Text</button>
+    <button id="yena">Show Text</button>
     
     <script src="./s1.js"></script>
 </body>
